# EmotionalEngine-NES

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
Include/: Nes.h  Nes_Pad.h
Programs/src/: Apu.cpp  Apu.h  CMakeLists.txt  Cpu.cpp  Cpu.h  Nes.cpp  Pad.cpp  Pad.h  Ppu.cpp  Ppu.h  System.cpp  System.h  cassette.cpp  cassette.h  constants.h
Tests/: CMakeLists.txt
Tests/Includes/: testUtil.h
Tests/Integrate/: CMakeLists.txt
Tests/Integrate/All/: CMakeLists.txt  testEmu.cpp
Tests/Integrate/Graphic/testPpu_PpuGraphicwithUI/: testPpu_PpuGraphicwithUI.sln
Tests/Integrate/Graphic/testPpu_PpuGraphicwithUI/testPpu_PpuGraphicwithUI/: Main.cpp  testPpu_PpuGraphicwithUI.vcxproj  testPpu_PpuGraphicwithUI.vcxproj.filters
Tests/Integrate/System/: CMakeLists.txt  testSystem.cpp
Tests/Libraries/: CMakeLists.txt
Tests/Libraries/testUtil/: CMakeLists.txt  testUtil.cpp
Tests/TestBinaries/: readme.txt
Tests/TestBinaries/helloworld/: expected.txt  expected_clear.txt
Tests/TestBinaries/helloworld/sample1/: makefile  sample1.asm  sample1.cfg
Tests/Unit/: CMakeLists.txt
Tests/Unit/cassette/: CMakeLists.txt  testCassette.cpp
lib/dxlib/: DxCompileConfig.h  DxDataType.h  DxDataTypeWin.h  DxDrawFunc.lib  DxDrawFunc_d.lib  DxDrawFunc_vs2012_x64.lib  DxDrawFunc_vs2012_x64_d.lib  DxDrawFunc_vs2012_x86.lib  DxDrawFunc_vs2012_x86_d.lib  DxDrawFunc_vs2015_x64_MD.lib  DxDrawFunc_vs2015_x64_MDd.lib  DxDrawFunc_vs2015_x64_MT.lib  DxDrawFunc_vs2015_x64_MTd.lib  DxDrawFunc_vs2015_x86_MD.lib  DxDrawFunc_vs2015_x86_MDd.lib  DxDrawFunc_vs2015_x86_MT.lib  DxDrawFunc_vs2015_x86_MTd.lib  DxDrawFunc_x64.lib  DxDrawFunc_x64_d.lib  DxFunctionWin.h  DxLib.h  DxLib.txt  DxUseCLib.lib  DxUseCLibW.lib  DxUseCLibW_d.lib  DxUseCLibW_vs2012_x64.lib  DxUseCLibW_vs2012_x64_ItrDbgLv0_d.lib  DxUseCLibW_vs2012_x64_d.lib  DxUseCLibW_vs2012_x86.lib  DxUseCLibW_vs2012_x86_ItrDbgLv0_d.lib  DxUseCLibW_vs2012_x86_d.lib  DxUseCLibW_vs2013_x64.lib  DxUseCLibW_vs2013_x64_ItrDbgLv0_d.lib  DxUseCLibW_vs2013_x64_d.lib  DxUseCLibW_vs2013_x86.lib  DxUseCLibW_vs2013_x86_ItrDbgLv0_d.lib  DxUseCLibW_vs2013_x86_d.lib  DxUseCLibW_vs2015_x64_ItrDbgLv0_MTd.lib  DxUseCLibW_vs2015_x64_MD.lib  DxUseCLibW_vs2015_x64_MDd.lib  (+94 more)
